--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <title>Document</title>
   </head>
   <body>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgqte3pmhS87I27h9ulTNycltibV3W7AE&libraries=places"></script>
     <div id="root"></div>
   </body>
 </html>
